# RAG-Ingestion-Pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py  worker.py
app/core/: chunker.py
tests/: test_main.py  test_worker.py
