[tool.poetry]
name = "rag-ingestion-pipeline"
version = "0.1.0"
description = "High-throughput asynchronous RAG ingestion pipeline."
authors = ["Devansh Baviskar <devansh.b1234@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
redis = {extras = ["asyncio"], version = "^5.0.0"}
prometheus-client = "^0.20.0"
pydantic = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true